[package]
name = "demo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0" 
crypto-hash = "0.3.4"
hex = "0.4"
rand = "0.8"
reqwest = "0.11"
magic-crypt = "3.1.13"
x25519-dalek = "1"
rng = "0.1.0"
bdk = { version = "0.28.2", default-features = false, features = ["std", "async-interface", "use-esplora-reqwest", "reqwest-default-tls", "keys-bip39","key-value-db"]}
js-sys = "0.3.48"
idb = "0.4"
rust-crypto-wasm = "0.3.1"
web-sys = { version="0.3.66", features=[ "console" ] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.6.0"
